# linkml-asciidoc-generator

./: .gitignore  MANIFEST.in  README.adoc  README.md  README.wip.md  \  pyproject.toml
data/: .dp_meetdata.yaml.swp  IEC61968.yml  IEC61970.yml  IEC62325.yml  STANDARDMAP.yml  core-equipment.yaml  dp_meetdata.new.yaml  dp_meetdata.yaml  dp_nbl_forecast.yaml  im_capaciteitskaart-full.yaml  im_capaciteitskaart.yaml  standard.yml
linkml_antora_generator/: generator.bak.py  generator.py  linkml_full.py  linkml_prof_logical_model.py  main.py  schema.py
linkml_antora_generator.old/: generator.py  main.py
linkml_antora_generator.old/antora/: main.py  serialization.py  slot_page.py  types.py
linkml_antora_generator/antora/: class_page.py  component_version.py  module.py  types.py
linkml_antora_generator/linkml/: types.py
linkml_asciidoc_generator/: config.py  main.py  parsing.py
linkml_asciidoc_generator/asciidoc/: .__init__.py.swp  __init__.py  standard_mapping.py
linkml_asciidoc_generator/asciidoc/class_page/: generate.py  model.py  render.py  (+1 more)
linkml_asciidoc_generator/generating/: class_page.py  linkml_documentation.py
linkml_asciidoc_generator/linkml/: parsing.py  query.py  read.py
linkml_asciidoc_generator/templates/: enumeration_page.adoc.jinja2  index_page.adoc.jinja2  navigation_page.adoc.jinja2  slot_page.adoc.jinja2
linkml_gen_asciidoc/: linkml-prof-logical-model.py
output/: index.adoc
output/class/: MarketEvaluationPoint.adoc
output/meetdatadataproduct/: nav.adoc
templates/: enum.adoc.jinja2
tests/: test_generator.py  test_schema.py
(+53 files in other folders)
