[project]
name = "linkml-gen-asciidoc"
version = "0.1.0"
description = "LinkML generator for Antora documentation in AsciiDoc."
readme = "README.adoc"
requires-python = ">=3.12"
dependencies = [
    "cssutils>=2.11.1",
    "jinja2>=3.1.4",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
